fixed hero slider overlapping header on big screen

--- a/assets/src/scss/5.templates/_tp-home.scss
+++ b/assets/src/scss/5.templates/_tp-home.scss
@@ -919,3 +919,8 @@
 		}
 	}
 }
+@include large-only {
+	.hero-slider {
+		margin-top: 8vh;
+	}
+}
